Cycles Transparent Shading BUG #92450

Closed
opened 2021-10-24 14:50:47 +02:00 by baoyu · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-23 20:02, hash: 8c21667f3c
Worked: (newest version of Blender that worked as expected)

Short description of error
When Object A with transparent shader intersecting Object B with MultiscatterGGX Glass shader or GGX shader+Volume Absorption, will cause artifacts.

The glass base mesh (mentioned as Object B) has three shading combination:
①GGX Glass shader at 0 roughness + Volume Absorption
②Multiscatter GGX Glass shader at 0 roughness + Volume Absorption
③Multiscatter GGX Glass shader at more than 0 roughness
All three combination will cause the artifact.
The following pic is rendered with all light path set to 64 and quite high iteration samples.

image.png
image.png

Exact steps for others to reproduce the error
Please open the providing blend file to reproduce.
Transparent Shading BUG.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-23 20:02, hash: `8c21667f3c` Worked: (newest version of Blender that worked as expected) **Short description of error** When ***Object A with transparent shader*** intersecting ***Object B with MultiscatterGGX Glass shader or GGX shader+Volume Absorption***, will cause artifacts. The glass base mesh (mentioned as Object B) has three shading combination: ①GGX Glass shader at 0 roughness + Volume Absorption ②Multiscatter GGX Glass shader at 0 roughness + Volume Absorption ③Multiscatter GGX Glass shader at **more than** 0 roughness All three combination will cause the artifact. The following pic is rendered with all light path set to 64 and quite high iteration samples. ![image.png](https://archive.blender.org/developer/F11466769/image.png) ![image.png](https://archive.blender.org/developer/F11466802/image.png) **Exact steps for others to reproduce the error** Please open the providing blend file to reproduce. [Transparent Shading BUG.blend](https://archive.blender.org/developer/F11466819/Transparent_Shading_BUG.blend)
Author

Added subscriber: @baoyu

Added subscriber: @baoyu
Author

Added subscriber: @brecht

Added subscriber: @brecht
Author

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @ktdfly

Added subscriber: @ktdfly

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

It remains me of another annoying bug which hasn't been solved yet.
https://developer.blender.org/T85259
image.png

It remains me of another annoying bug which hasn't been solved yet. https://developer.blender.org/T85259 ![image.png](https://archive.blender.org/developer/F11516929/image.png)
Author

This transparent shading bug makes it unable to render decals over glassware using cycles.

This transparent shading bug makes it unable to render **decals over glassware** using cycles.

This appears to be caused by our trick to skip the shade_surface kernel if we know it has no emission or shadow transparency. We assume the throughput is the same in intersect_closest, but with shade_volume in between that is not the case.

This appears to be caused by our trick to skip the `shade_surface` kernel if we know it has no emission or shadow transparency. We assume the throughput is the same in `intersect_closest`, but with `shade_volume` in between that is not the case.

This issue was referenced by blender/cycles@abae29fbbd

This issue was referenced by blender/cycles@abae29fbbd5583ebcb42d6121560659b2bb71201

This issue was referenced by ffe115d1a8

This issue was referenced by ffe115d1a8f625bb5a6b72616fa2f955448869ff

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-04 16:48:11 +01:00

This issue was referenced by None@62742

This issue was referenced by None@62742
Author

Tested on build

version: 3.1.0 Alpha, branch: master
commit date: 2021-11-04 21:35
hash: 3364a5bea6
build date: 2021-11-05, 01:00:16

Quite happy to see that the volume + transparent bug has been solved.
While the Multiscatter GGX + transparent scenario still gives the wrong result.
image.png

Tested on build >version: 3.1.0 Alpha, branch: master >commit date: 2021-11-04 21:35 >hash: 3364a5bea6c9 >build date: 2021-11-05, 01:00:16 Quite happy to see that the volume + transparent bug has been solved. While the Multiscatter GGX + transparent scenario still gives the wrong result. ![image.png](https://archive.blender.org/developer/F11738838/image.png)

Added subscriber: @Fernando-Alcala

Added subscriber: @Fernando-Alcala

You should create another report for the rough one

You should create another report for the rough one
Author

In #92450#1253376, @Fernando-Alcala wrote:
You should create another report for the rough one

This is the new thread.
https://developer.blender.org/T93068

> In #92450#1253376, @Fernando-Alcala wrote: > You should create another report for the rough one This is the new thread. https://developer.blender.org/T93068
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92450
No description provided.