Fix T92450: Cycles wrong render with overlapping glass, transparency and volumes

We need to store the continuation probability used to make the termination
decision in intersect_closest, instead of recomputing it in shade_surface.
Because otherwise a shade_volume in between can change the throughput and
change the probability.